--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+    <!-- input div id portion to activate proper functionality of button -->
+        <div id= "online-reputation-management" div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
