--- a/index.html
+++ b/index.html
@@ -4,80 +4,104 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>HoriSEOn</title>
+    <!-- Created a working title of Horiseon -->
 </head>
 
-<body>
-    <div class="header">
+<Body>
+    <!-- changed to header for more semantic HTML below -->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-    <!-- input div id portion to activate proper functionality of button -->
-        <div id= "search-engine-optimization" div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <!-- changed div to nav -->
+        <nav>
+
+            <!-- added link to properly deploy webpage to new tab -->
+            <a href="#search-engine-optimization" target="no_blank">Search Engine Optimization</a>
+                <!-- added link to properly deploy webpage to new tab -->
+            <a href="#online-reputation-management" target="no_blank">Online Reputation Management</a>
+                <!-- added link to properly deploy webpage to new tab -->
+            <a href="#social-media-marketing" target="no_blank">Social Media Marketing</a>
+
+        </nav>
+    </header>
+    <div class="hero"></div>  
+    <!-- changed to main vs div class content below -->
+    <main>
+        <!-- input div id portion to activate proper functionality of button -->
+        <!-- changed div to content  -->
+        <content id= "search-engine-optimization" div class="search-engine-optimization">
+        <!--added accessibility to image --> -->
+            <img src="./assets/images/search-engine-optimization.jpg" alt"image with notepad and pens" class="float-left" />
             <h2>Search Engine Optimization</h2>
-            <p>zc 
+            <!-- removed typo after initial opening, erased zc spelling error -->
+            <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <!-- changed div to content -->
+        </content>
+        <!-- changed div to content -->
+        <content id="online-reputation-management" class="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt"image of laptop with graph showing positive increase. class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <!-- changed div to content -->
+        </content>
+        <!-- changed div to content -->
+        <content id="social-media-marketing" class="social-media-marketing">
+            <!-- added accessibility to social media marketing image below -->
+            <img src="./assets/images/social-media-marketing.jpg" alt"picure of community work desk with several computers and coffees" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+        <!-- changed div to content -->
+        </content>
+    <!-- changed below ending div to main -->
+    </main>
+    <!-- line below changed to aside for semanatic html -->
+    <aside>
+    <!-- line below changed to article -->
+        <article class- "benefit load">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <!-- <!-- Below put Accessible image reference for lead generation picture --> -->
+            <img src="./assets/images/lead-generation.png" alt="gear going into funnel turning into a money symbol image"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        <!-- changed line below to article -->
+        </article>
+        <!-- changed line below to section -->
+        <article>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+        <!-- Line below added alt accessibility for image-->
+            <img src="./assets/images/brand-awareness.png" alt="image with lightbulb for businessman head giving off frequency waves"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        <!-- changed below to article -->
+        </article>
+        <!-- changed line below to article -->
+        <article>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <!-- line below added alt accessibility for image -->
+            <img src="./assets/images/cost-management.png" alt="image with gears and money symbols"</img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+        <!-- changed line below to article -->
+        </article>
+        <!-- Line below changed to aside for semantic html -->
+    </aside>
+    <!-- changed line below to footer -->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    <!-- changed line below to footer -->
+    </footer>
 </body>
 
 </html>
