had to change some html specifically line 89

--- a/index.html
+++ b/index.html
@@ -66,41 +66,41 @@
         <article class- "benefit load">
             <h3>Lead Generation</h3>
             <!-- <!-- Below put Accessible image reference for lead generation picture --> -->
-            <img src="./assets/images/lead-generation.png" alt="gear going into funnel turning into a money symbol image"/>
+            <img src="./assets/images/lead-generation.png" alt="gear going into funnel turning into a money symbol"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        <!-- changed line below to article -->
+            <!-- changed line below to article -->
         </article>
-        <!-- changed line below to section -->
+            <!-- changed line below to section -->
         <article>
             <h3>Brand Awareness</h3>
-        <!-- Line below added alt accessibility for image-->
+            <!-- Line below added alt accessibility for image-->
             <img src="./assets/images/brand-awareness.png" alt="image with lightbulb for businessman head giving off frequency waves"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        <!-- changed below to article -->
+            <!-- changed below to article -->
         </article>
-        <!-- changed line below to article -->
+            <!-- changed line below to article -->
         <article>
             <h3>Cost Management</h3>
-            <!-- line below added alt accessibility for image -->
-            <img src="./assets/images/cost-management.png" alt="image with gears and money symbols"</img>
+            <!-- line below added alt accessibility for image and removed IMG -->
+            <img src="./assets/images/cost-management.png" alt="image with gears and money symbols"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        <!-- changed line below to article -->
+            <!-- changed line below to article -->
         </article>
-        <!-- Line below changed to aside for semantic html -->
+            <!-- Line below changed to aside for semantic html -->
     </aside>
-    <!-- changed line below to footer -->
+            <!-- changed line below to footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    <!-- changed line below to footer -->
+            <!-- changed line below to footer -->
     </footer>
 </body>
 
