worked a lot on CSS with tutor

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Created a working title of Horiseon -->
 </head>
 
-<Body>
+<body>
     <!-- changed to header for more semantic HTML below -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -16,56 +16,61 @@
         <nav>
 
             <!-- added link to properly deploy webpage to new tab -->
-            <a href="#search-engine-optimization" target="no_blank">Search Engine Optimization</a>
-                <!-- added link to properly deploy webpage to new tab -->
-            <a href="#online-reputation-management" target="no_blank">Online Reputation Management</a>
-                <!-- added link to properly deploy webpage to new tab -->
-            <a href="#social-media-marketing" target="no_blank">Social Media Marketing</a>
-
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <div class="hero"></div>  
-    <!-- changed to main vs div class content below -->
+    <!-- changed to main vs div class section below -->
     <main>
         <!-- input div id portion to activate proper functionality of button -->
-        <!-- changed div to content  -->
-        <content id= "search-engine-optimization" div class="search-engine-optimization">
-        <!--added accessibility to image --> -->
-            <img src="./assets/images/search-engine-optimization.jpg" alt"image with notepad and pens" class="float-left" />
+        <!-- changed div to section  -->
+        <section id= "search-engine-optimization"  class="section">
+        <!--added accessibility to image --> 
+            <img src="./assets/images/search-engine-optimization.jpg" alt"image notepad with pens" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <!-- removed typo after initial opening, erased zc spelling error -->
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        <!-- changed div to content -->
-        </content>
-        <!-- changed div to content -->
-        <content id="online-reputation-management" class="online-reputation-management">
+        <!-- changed div to section -->
+        </section>
+        <!-- changed div to section -->
+        <section id="online-reputation-management" class="section">
             <img src="./assets/images/online-reputation-management.jpg" alt"image of laptop with graph showing positive increase. class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        <!-- changed div to content -->
-        </content>
-        <!-- changed div to content -->
-        <content id="social-media-marketing" class="social-media-marketing">
+        <!-- changed div to section -->
+        </section>
+        <!-- changed div to section -->
+        <section id="social-media-marketing" class="section">
             <!-- added accessibility to social media marketing image below -->
             <img src="./assets/images/social-media-marketing.jpg" alt"picure of community work desk with several computers and coffees" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        <!-- changed div to content -->
-        </content>
+        <!-- changed div to section -->
+        </section>
     <!-- changed below ending div to main -->
     </main>
     <!-- line below changed to aside for semanatic html -->
-    <aside>
+    <aside class="benefits">
     <!-- line below changed to article -->
-        <article class- "benefit load">
+        <article>
             <h3>Lead Generation</h3>
-            <!-- <!-- Below put Accessible image reference for lead generation picture --> -->
+            <!-- Below put Accessible image reference for lead generation picture -->
             <img src="./assets/images/lead-generation.png" alt="gear going into funnel turning into a money symbol image"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
